--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 logging.level.root=INFO
+#logging.level.org.springframework.security=DEBUG
 
 #spring.datasource.platform=h2
 spring.datasource.url=jdbc:h2:mem:smartbee
