--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,7 @@
 build:
   docker:
     web: Dockerfile
-run:
-  web: bundle exec puma -C config/puma.rb
+#    worker: worker/Dockerfile
+#run:
+#  web: bundle exec puma -C config/puma.rb
+#  worker: python myworker.py
